# village_simulation

./: .gitignore  LICENSE  README.md  asset_references.txt  assets_list.txt  project.godot  pyproject.toml  validate_assets.py  validation_results.txt
autoloads/: audio_manager.gd  audio_manager.gd.uid  event_bus.gd  event_bus.gd.uid  faction_manager.gd  faction_manager.gd.uid  game_state.gd  game_state.gd.uid  narrative_engine.gd  narrative_engine.gd.uid  quest_manager.gd  quest_manager.gd.uid  relationship_manager.gd  relationship_manager.gd.uid  save_manager.gd  save_manager.gd.uid  time_manager.gd  time_manager.gd.uid  world_simulation.gd  world_simulation.gd.uid
data/dialogues/: alchemists_confession_leverage.json  alchemists_confession_private.json  alchemists_confession_public.json  ambient_overhears.json  ashworth_dying.json  ashworth_intro.json  ashworth_ledger_quest.json  ashworth_sacrifice_dialogue.json  baker_wife_dialogue.json  blood_and_herb_crisis.json  children_funeral.json  continue_investigation_alone.json  draven_intro.json  draven_negotiation.json  draven_voss_confrontation.json  elara_antidote_result.json  elara_follow_up.json  elara_herb_quest.json  elara_intro.json  elara_investigation.json  elara_maren_reconciliation.json  ending_atonement.json  ending_betrayed.json  ending_dark_price.json  ending_exodus.json  ending_harmony.json  ending_last_stand.json  ending_martyr.json  ending_new_order.json  ending_scorched_earth.json  epilogue_slides.json  (+62 more)
tools/: enhance_assets.py  generate_assets.py  generate_audio.py  generate_more_audio.py  generate_new_regions.py  generate_pro_tileset.py  generate_regions.py  generate_tilemap.gd  generate_tilemap.gd.uid  generate_tilemap_data.py  paint_ashvale.gd  paint_ashvale.gd.uid  setup_tileset.gd  setup_tileset.gd.uid
(+289 files in other folders)
