[project]
name = "village-simulation"
version = "1.0.0"
description = "A medieval village simulation"
requires-python = ">=3.11"
dependencies = [
    "esper>=3.2",
    "tcod>=17.0",
    "numpy>=1.26",
    "noise>=1.2",
    "pyyaml>=6.0",
    "repowise>=0.1.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
gpu = [
    "cupy-cuda12x>=13.0",
]


[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
